--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "jolocom-sdk": "^0.5.2",
+    "jolocom-sdk": "^0.6.0",
+    "utf-8-validate": "^5.0.2",
     "ws": "^7.2.5"
   }
 }
