--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "jolocom-sdk": "^0.6.0",
+    "@jolocom/sdk": "^0.7.0",
+    "@jolocom/sdk-storage-typeorm": "^1.1.0",
+    "typeorm": "^0.2.24",
+    "typescript": "^3.9.2",
     "utf-8-validate": "^5.0.2",
     "ws": "^7.2.5"
   }
