--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@jolocom/sdk": "^0.7.0",
+    "@jolocom/sdk": "^0.9.12",
+    "@jolocom/sdk-password-store-filesystem": "^0.1.0",
     "@jolocom/sdk-storage-typeorm": "^1.1.0",
+    "jolocom-lib": "^4.3.2",
     "typeorm": "^0.2.24",
-    "typescript": "^3.9.2",
+    "typescript": "^3.9.5",
     "utf-8-validate": "^5.0.2",
     "ws": "^7.2.5"
   }
